--- a/config/config.json
+++ b/config/config.json
@@ -1,16 +1,13 @@
 {
-  "module": {
-    "name": "email"
-  },
+  "name": "email",
   "db": {
-    "projectId": "pimex-email-test"
+    "projectId": "pimex-email-test",
+    "keyFilename": "./config/test-key.json"
   },
-  "email": {
-    "providers": {
-      "mailgun": {
-        "key": "key-a1b6d308694c51ad79f0618e0ed74369",
-        "domain": "test.pimex.email"
-      }
+  "providers": {
+    "mailgun": {
+      "key": "key-a1b6d308694c51ad79f0618e0ed74369",
+      "domain": "test.pimex.email"
     }
   }
 }
