Se cambia el comando prepublish en package.json
- Se cambia el comando prepublish por prepublishOnly para el build en el
momento de la publicación del paquete en el package.json

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "NODE_ENV=test ava -v ./test/**.js",
     "server-start": "pm2 start ./dist/server.js",
     "build": "babel src --out-dir dist",
-    "prepublish": "npm run build",
+    "prepublishOnly": "npm run build",
     "watch": "babel src --out-dir dist --watch"
   },
   "ava": {
