Punto de entrada para obtener eventos de un mensaje
- Se agrega punto de entrada para consultar los eventos de mensaje por su id

- Se agrega metodo getAllBy a la clase Event para obtener eventos por diferente indice

- Se agrega el metodo getEvents a la clase Message para obtener todos los eventos de un mensaje

- Se actualiza el script test en el packge.json agregando la variable de entorno PIMEX_CONFIG

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "homepage": "https://pimex.co/",
   "scripts": {
     "dev": "NODE_ENV=test node ./dist/server.js",
-    "test": "NODE_ENV=test ava -v ./test/**.js",
+    "test": "PIMEX_CONFIG=. NODE_ENV=test ava -v -s ./test/**.js",
     "server-start": "pm2 start ./dist/server.js",
     "build": "babel src --out-dir dist",
     "postinstall": "npm run build",
