Inicio de sistema de templates
- Se agrega el sistema para plantillas de email

- Se agregan los puntos de entrada para las funcionalidades con 
plantillas

--- a/.pimexrc.json
+++ b/.pimexrc.json
@@ -1,17 +1,18 @@
 {
   "modules": {
-    "message": {
-      "name": "email",
+    "messages": {
+      "name": "messages",
       "db": {
-        "projectId": "pimex-email-test",
-        "keyFilename": "./config/test-key.json"
+        "projectId": "",
+        "keyFilename": ""
       },
       "providers": {
         "mailgun": {
           "key": "",
-          "domain": "test.pimex.email"
+          "domain": ""
         }
       }
     }
-  }
+  },
+  "keysFolder": "config"
 }
