--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "homepage": "https://pimex.co/",
   "scripts": {
-    "dev": "NODE_ENV=test node ./dist/server.js",
+    "dev": "NODE_ENV=test babel-node ./src/server.js",
     "test": "NODE_ENV=test ava -v -s ./test/**.js",
     "init": "pm2 start ./dist/server.js",
     "start": "node ./dist/server.js",
@@ -34,7 +34,7 @@
     "mailgun-js": "^0.19.0",
     "moment": "^2.22.2",
     "pm2": "^2.10.4",
-    "request": "^2.87.0",
+    "request": "^2.88.0",
     "request-promise": "^4.2.2"
   },
   "devDependencies": {
@@ -46,10 +46,5 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "uuid-base62": "^0.1.0"
-  },
-  "pimex": {
-    "modules": {
-      "email": "./config/config.json"
-    }
   }
 }
