--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,9 @@
 {
   "presets": [
-    "es2015"
+    "@babel/preset-env"
   ],
   "plugins": [
-    "transform-runtime",
-    "transform-async-to-generator"
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-transform-async-to-generator"
   ]
 }
