--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
   },
   "ava": {
     "require": [
-      "babel-register"
-    ],
-    "babel": "inherit"
+      "@babel/register"
+    ]
   },
   "author": "jquiceno",
   "license": "ISC",
   "dependencies": {
-    "firebase-admin": "^6.0.0",
+    "boom": "^7.3.0",
+    "firebase-admin": "^6.5.0",
+    "getfig": "0.0.3",
     "hapi": "^17.5.3",
+    "joi": "^14.3.1",
     "mailgun-js": "^0.19.0",
     "moment": "^2.22.2",
     "pm2": "^2.10.4",
@@ -37,13 +39,13 @@
     "request-promise": "^4.2.2"
   },
   "devDependencies": {
-    "ava": "^0.25.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-transform-async-to-generator": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/register": "^7.0.0",
+    "@babel/runtime": "^7.2.0",
+    "ava": "^1.0.1",
     "uuid-base62": "^0.1.0"
   }
 }
