--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.2.0",
     "ava": "^1.0.1",
+    "delay": "^4.1.0",
     "uuid-base62": "^0.1.0"
   }
 }
