--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "homepage": "https://pimex.co/",
   "scripts": {
-    "dev": "NODE_ENV=test babel-node ./src/server.js",
+    "dev": "NODE_ENV=test ava -v -s -- -w",
     "test": "NODE_ENV=test ava -v -s ./test/**.js",
     "init": "pm2 start ./dist/server.js",
     "start": "node ./dist/server.js",
@@ -37,7 +37,8 @@
     "moment": "^2.23.0",
     "pm2": "^3.2.8",
     "request": "^2.88.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "schemio": "^0.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
