--- a/package.json
+++ b/package.json
@@ -14,29 +14,29 @@
   "scripts": {
     "dev:test": "NODE_ENV=test ava -w",
     "test": "NODE_ENV=test ava -v -s ./test/**.js",
-    "start": "NODE_ENV=production pm2 start ./index.js",
+    "start": "NODE_ENV=production node ./app.js",
     "dev": "DEBUG=server:* NODE_ENV=dev nodemon ./app.js"
   },
   "author": "jquiceno",
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^9.1.0",
+    "@hapi/hapi": "^19.1.1",
     "boom": "^7.3.0",
     "debug": "^4.1.1",
     "defaults": "^1.0.3",
-    "firebase-admin": "^6.5.0",
+    "firebase-admin": "^8.12.1",
     "getfig": "0.0.3",
-    "hapi": "^17.8.1",
     "joi": "^14.3.1",
     "mailgun-js": "^0.22.0",
-    "moment": "^2.23.0",
-    "pm2": "^3.2.8",
+    "moment": "^2.25.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "schemio": "^0.1.4",
-    "uuid": "^7.0.3"
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
-    "ava": "^3.8.1",
+    "ava": "^3.8.2",
     "delay": "^4.1.0",
     "nodemon": "^2.0.3"
   }
