--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@hapi/boom": "^9.1.0",
     "@hapi/hapi": "^19.1.1",
+    "@hapi/joi": "^17.1.1",
     "boom": "^7.3.0",
     "debug": "^4.1.1",
     "defaults": "^1.0.3",
